home page changes

--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -3,6 +3,7 @@
   font-size: 24px;
   font-weight: bold;
 }
+
 .servicesContainerBg {
   /* background: url(../../assets/images/Services-bg.svg); */
   background-repeat: no-repeat;
@@ -15,14 +16,17 @@
   background-color: #f3f2f8;
   position: relative;
 }
+
 .shapeContainer {
   position: absolute;
   top: 0;
   width: 100%;
 }
+
 .shapeContainer svg {
   fill: var(--white);
 }
+
 .serviceCard {
   background: var(--white);
   padding: 30px;
@@ -32,16 +36,19 @@
   min-height: 167px;
   position: relative;
 }
+
 .serviceIcon img {
   max-width: 58px;
   margin-bottom: 10px;
 }
+
 .serviceCard h5 {
   color: var(--light-black);
   font-size: 18px;
   text-transform: capitalize;
   margin: 0;
 }
+
 .serviceAction {
   display: none;
   color: var(--white);
@@ -55,6 +62,7 @@
   left: 24px;
   border: none;
 }
+
 /* .serviceAction button{
   background-color: transparent;
   border: none;
@@ -71,18 +79,22 @@
   align-items: center;
   margin-left: 10px;
 }
+
 .serviceCard:hover .serviceAction {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .serviceAction:hover {
   background: var(--secondary);
 }
+
 .serviceAction:focus {
   box-shadow: none;
   border: none;
 }
+
 .aboutUsSec {
   background-image: url(../../assets/images/whyYuvasoftImg.png);
   background-repeat: no-repeat;
@@ -90,15 +102,19 @@
   padding: 100px 0;
   background-position: right;
 }
+
 .themeTitleCenter h4 {
   margin: 0 auto 12px;
 }
+
 .themeTitleCenter h3 {
   text-align: center;
 }
+
 .accordionContainer {
   border: none;
 }
+
 .accordionCard {
   margin-bottom: 20px;
   background: #fff;
@@ -106,11 +122,13 @@
   border-radius: 28px !important;
   border: none;
 }
+
 .accordionCard [class~="accordion-header"] [class~="collapsed"] {
   border-radius: 28px !important;
   color: var(--light-black);
   font-weight: 500;
 }
+
 .accordionCard [class~="accordion-header"] button {
   border-top-left-radius: 28px !important;
   border-top-right-radius: 28px !important;
@@ -119,6 +137,7 @@
   font-weight: 500;
   box-shadow: none;
 }
+
 .accordionCard [class~="accordion-header"] button::after {
   background-image: url(../../assets/images/up_icon.svg);
   background-color: var(--primary);
@@ -128,18 +147,22 @@
   background-size: initial;
   background-position: center;
 }
+
 .accordionCard [class~="accordion-header"] button:focus {
   border: none;
   box-shadow: none;
 }
+
 .workflowWrapper {
   padding: 100px 0;
 }
+
 .workflowWrapper {
   background-image: url(../../assets/images/workFLowBg.svg);
   background-position: top right;
   background-repeat: no-repeat;
 }
+
 .workCard {
   margin: 5px;
   text-align: center;
@@ -160,20 +183,25 @@
   color: #1a1b1e;
   font-family: "Red Hat Display", sans-serif;
 }
+
 .titleParagraph {
   color: var(--light-black);
   font-size: 16px;
 }
+
 .whatWeDoWrapper {
   padding: 80px 0 130px;
   position: relative;
 }
+
 .weDoSliderBox {
   position: relative;
 }
+
 .weDoSliderImage {
   border-radius: 15px;
 }
+
 .weDoInfoBox {
   width: 270px;
   position: absolute;
@@ -184,11 +212,13 @@
   transition: all 0.35s ease-in-out;
   transition-duration: .5S;
 }
+
 .weDoSliderBox:hover .weDoInfoBox {
   right: 62px;
   opacity: 1;
   bottom: 25px;
 }
+
 .weDoInfoInfoInner {
   background-color: var(--primary);
   color: var(--white);
@@ -196,34 +226,42 @@
   border-bottom-left-radius: 20px;
   padding: 10px;
 }
+
 .weDoInfoInfoInner h5 {
   font-size: 22px;
 }
+
 .weDoInfoInfoInner p {
   font-size: 14px;
   margin-bottom: 0;
 }
+
 .slick-slide.slick-active {
   margin: 0 auto;
   display: flex;
   justify-content: center;
 }
+
 .whatweDoSlider [class~="slick-dots"] {
   margin-bottom: 20px;
   bottom: -70px;
 }
+
 .whatweDoSlider [class~="slick-dots"] li button:before {
   font-size: 18px;
   color: var(--primary-10);
   opacity: 1;
 }
+
 .whatweDoSlider [class~="slick-dots"] li[class~="slick-active"] button:before {
   color: var(--primary);
 }
+
 .whatweDoSliderControl {
   display: flex;
   justify-content: flex-end;
 }
+
 .whatweDoSliderControl button {
   border-radius: 50%;
   font-size: 28px;
@@ -235,24 +273,30 @@
   margin: 0 10px;
   border: none;
 }
+
 .whatweDoSliderControl button:nth-child(1) {
   background-color: var(--light-black);
 }
+
 .whatweDoSliderControl button:nth-child(2) {
   background-color: var(--primary);
 }
+
 .whatweDoSliderControl [class~="slick-arrow"] {
   display: none !important;
 }
+
 .testimonialWrapper {
   background-image: url(../../assets/images/testimonialBg.svg);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 100px 0;
 }
+
 .clientTestimonialTitle h3 {
   color: var(--white);
 }
+
 .clientTestimonialCard {
   border-radius: 10px;
   border: none;
@@ -261,6 +305,7 @@
   margin: 0 auto;
   min-height: 300px;
 }
+
 .clientTestimonialCard::after {
   content: "";
   background-image: url(../../assets/images/testimonialCardBg.svg);
@@ -272,6 +317,7 @@
   border-radius: 10px !important;
   margin: 10px;
 }
+
 .clientTestimonialCard::before {
   content: "";
   background-image: url(../../assets/images/testimonialCardBg.svg);
@@ -283,45 +329,55 @@
   border-radius: 10px !important;
   margin: 10px;
 }
+
 .clientTestimonialCard [class~="card-body"] {
   padding: 25px;
 }
+
 .testimonialCardHeader {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
 }
+
 .clientDetail {
   margin-left: 20px;
 }
+
 .clientDetail h5 {
   font-size: 18px;
   font-weight: 500;
   margin-bottom: 0;
   color: var(--secondary);
 }
+
 .clientDetail p {
   color: var(--light-black);
   margin-bottom: 0;
   font-size: 18px;
 }
+
 .clientProfileBox {
   display: flex;
   align-items: center;
 }
+
 .clientProfileBox .clientProfileImg {
   width: 70px;
   border-radius: 50px;
   overflow: hidden;
 }
+
 .clientFeedbackBox {
   color: var(--light-black);
   font-size: 16px;
   line-height: 30px;
 }
+
 .clientTestimonialSliderControl {
   display: flex;
 }
+
 .clientTestimonialSliderControl button {
   border-radius: 50%;
   font-size: 28px;
@@ -334,31 +390,35 @@
   border: 1px solid var(--white);
   background-color: transparent;
 }
+
 .clientTestimonialSlider [class~="slick-dots"] {
   margin-bottom: 20px;
   bottom: -70px;
 }
+
 .clientTestimonialSlider [class~="slick-dots"] li button:before {
   font-size: 18px;
   color: var(--primary-10);
   opacity: 0.25;
 }
-.clientTestimonialSlider
-  [class~="slick-dots"]
-  li[class~="slick-active"]
-  button:before {
+
+.clientTestimonialSlider [class~="slick-dots"] li[class~="slick-active"] button:before {
   color: var(--primary-10);
   opacity: 1;
 }
+
 .clientTestimonialSlider [class~="slick-arrow"] {
   display: none !important;
 }
+
 .whyUsContainer {
   padding: 100px 0;
 }
+
 .whyusTitle h3 {
   margin-bottom: 0;
 }
+
 .whyUsContainer [class~=CircularProgressbar] [class~=CircularProgressbar-path] {
   stroke: var(--primary);
 }
@@ -368,6 +428,7 @@
   height: 800px;
   display: flex;
 }
+
 .carouseItemContainer:after {
   background-repeat: no-repeat;
   margin-bottom: 0;
@@ -382,6 +443,7 @@
   top: 0;
   z-index: 999;
 }
+
 /* .carouseItemContainer1:after{
   position: relative;
 } */
@@ -390,9 +452,11 @@
   right: 0;
   top: 0;
 }
+
 .bannerImgWrapper img {
   height: 100vh;
 }
+
 .achievementSection {
   background-image: url(../../assets/images/clientDetailBg.png);
   background-repeat: no-repeat;
@@ -402,26 +466,42 @@
   background-size: cover;
   border-radius: 10px;
 }
+
 .achievementcontainer {
   align-items: center;
   height: 100%;
   display: flex;
   justify-content: space-around;
 }
+
 .achieventContent {
   color: var(--white);
 }
+
 .achieventContent h3 {
   margin-bottom: 0;
 }
+
 .achieventContent p {
   margin-bottom: 0;
   text-transform: capitalize;
   font-weight: 500;
 }
-.CircularProgressbar .CircularProgressbar-path{
+
+.CircularProgressbar .CircularProgressbar-path {
   background: red;
 }
-.awardsSection{
+
+.awardsSection {
   padding-bottom: 100px;
+}
+
+@media only screen and (max-width: 991px) {
+
+  .workflowWrapper{
+    background-image: none;
+  } 
+  /* .weDoSliderBox{
+    max-width: 90%;
+  } */
 }
