--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -3,7 +3,8 @@
 
   .ourContact {
     padding: 30px 60px 30px;
-    background-image: url(../../assets/images/testimonialBg.svg);
+    // background-image: url(../../assets/images/testimonialBg.svg);
+    background-image: url(../../assets/images/contact-address-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     // background-image: linear-gradient(90deg,
@@ -12,66 +13,86 @@
     border-radius: 15px;
     margin-right: 30px;
     margin-left: 30px;
-    box-shadow: 18px 18px 40px 0px rgba(240, 35, 52, .30);
+    // box-shadow: 18px 18px 40px 0px rgba(240, 35, 52, .30);
     color: var(--white);
-    margin-bottom: -30px;
+    margin-bottom: 30px;
+    border-radius: 20px;
     position: relative;
     z-index: 2;
 
-    h6 {
-      font-size: 14px;
-      font-weight: bold;
-      color: var(--white);
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.85);
+      z-index: 0;
+      border-radius: 20px;
+    }
+
+    .ourContactContainer {
       position: relative;
-      display: inline-block;
-      padding-left: 21px;
-      letter-spacing: 1px;
-      margin-bottom: 15px;
-      text-transform: uppercase;
+      z-index: 2;
 
-      &:after {
-        background: var(--white);
-        position: absolute;
-        content: "";
-        width: 7px;
-        height: 7px;
-        top: 5px;
-        left: 0;
-        border-radius: 50%;
-      }
-    }
+      h6 {
+        font-size: 14px;
+        font-weight: bold;
+        color: var(--white);
+        position: relative;
+        display: inline-block;
+        padding-left: 21px;
+        letter-spacing: 1px;
+        margin-bottom: 15px;
+        text-transform: uppercase;
 
-    h2 {
-      font-weight: 700;
-      text-transform: capitalize;
-    }
-
-    .contactInfo {
-      display: flex;
-      margin-bottom: 15px;
-
-      .contactIcons {
-        font-size: 30px;
-        min-width: 30px;
+        &:after {
+          background: var(--white);
+          position: absolute;
+          content: "";
+          width: 7px;
+          height: 7px;
+          top: 5px;
+          left: 0;
+          border-radius: 50%;
+        }
       }
 
-      .infoText {
-        padding-left: 20px;
-        font-weight: 500;
+      h2 {
+        font-weight: 700;
+        text-transform: capitalize;
+      }
 
-        h6 {
-          padding: 0;
-          line-height: 0;
+      .contactInfo {
+        display: flex;
+        margin-bottom: 15px;
 
-          &:after {
-            display: none;
+        .contactIcons {
+          font-size: 30px;
+          min-width: 30px;
+        }
+
+        .infoText {
+          padding-left: 20px;
+          font-weight: 500;
+
+          h6 {
+            padding: 0;
+            line-height: 0;
+
+            &:after {
+              display: none;
+            }
+          }
+
+          p {
+            font-size: 20px;
           }
         }
-
-        p {
-          font-size: 20px;
-        }
       }
+
+
     }
   }
 
@@ -80,13 +101,14 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+
     h6 {
       text-transform: capitalize;
       font-size: 24px;
       font-weight: bold;
       color: #1a1b1e;
       position: relative;
-      display: inline-block;      
+      display: inline-block;
       letter-spacing: 1px;
       margin-bottom: 15px;
     }
@@ -98,7 +120,8 @@
       color: #a5b7d2;
       text-transform: capitalize;
       position: relative;
-      &::before{
+
+      &::before {
         content: "";
         position: absolute;
         width: 7px;
@@ -116,9 +139,20 @@
 
     .contactForm {
       [class~="form-control"] {
-        font-size: 16px;
-        color: #7e7e7e;
-        border-radius: 20px;
+        // font-size: 16px;
+        // color: #7e7e7e;
+        // border-radius: 20px;
+        width: 100%;
+        border: 1px solid #ededed;
+        font-size: 15px;
+        height: 57px;
+        border-radius: 3px;
+        padding: 12px 24px;
+        margin-bottom: 16px;
+        color: #14133b;
+        font-family: "Roboto", sans-serif;
+        outline: none;
+        background: transparent;
 
         &::placeholder {
           color: #7e7e7e;
