--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -410,7 +410,10 @@
 .clientTestimonialSlider [class~="slick-arrow"] {
   display: none !important;
 }
-
+.progressBarContainer{
+  width: 80%;
+  margin: 20px;
+}
 .whyUsContainer {
   padding: 100px 0;
 }
@@ -495,6 +498,12 @@
 .awardsSection {
   padding-bottom: 100px;
 }
+
+@media only screen and (max-width: 1024px){
+  
+}
+
+
 
 @media only screen and (max-width: 991px) {
 
