--- a/components/common/Header/Header.module.css
+++ b/components/common/Header/Header.module.css
@@ -35,12 +35,12 @@
   padding: 0 0 0 10px;
   display: flex;
   margin: 0;
-  border-left: 1px solid rgba(255,255,255,.3);
+  /* border-left: 1px solid rgba(255,255,255,.3); */
 }
 .headerMenu{
   margin-right: 10px;
 }
-.topHeader ul li{
+/* .topHeader ul li{
   width: 30px;
     display: flex;
     align-items: center;
@@ -48,14 +48,25 @@
     background: var(--white);
     border-radius: 50%;
     padding: 7px;
+} */
+.topHeader ul li a{
+    width: 35px;
+    margin-right: 20px;
+    transition: all .3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .topHeaderleft{
   display: flex;
   align-items: center;
+  height: 100%;
 }
 .topHeaderRight{
   display: flex;
   color: var(--white);
+  justify-content: flex-end;
 }
 .menuBox{
   margin: 0 15px;
