--- a/components/Services/Services.module.scss
+++ b/components/Services/Services.module.scss
@@ -91,7 +91,7 @@
                 }
             }
             [class~=slick-slide] {
-                .inActiveTab {
+                .serviceIconTab {
                     border: 1px solid rgba(255, 255, 255, 0.25);
                     padding: 30px 15px 15px;
                     border-radius: 15px;
@@ -139,6 +139,18 @@
                         .inactiveIcon {
                             display: none;
                         }
+                    }
+                }
+                .activeTab {
+                    background: var(--white);
+                    .serviceTitle {
+                        color: var(--secondary);
+                    }
+                    .activeIcon {
+                        display: block;
+                    }
+                    .inactiveIcon {
+                        display: none;
                     }
                 }
             }
