fixed designing issue and change home page slider

--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -181,6 +181,7 @@
 
     }
     .whatweDoSlider{
+        margin-bottom: 20px;
         button{
             &:hover{
                 box-shadow: none;
