--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -32,7 +32,7 @@
       z-index: 2;
 
       h6 {
-        font-size: 14px;
+        font-size: 18px;
         font-weight: bold;
         color: var(--white);
         position: relative;
@@ -57,6 +57,7 @@
       h2 {
         font-weight: 700;
         text-transform: capitalize;
+        margin-bottom: 20px;
       }
 
       .contactInfo {
@@ -64,7 +65,7 @@
         margin-bottom: 15px;
 
         .contactIcons {
-          font-size: 30px;
+          font-size: 40px;
           min-width: 30px;
         }
 
@@ -82,7 +83,8 @@
           }
 
           p {
-            font-size: 20px;
+            font-size: 16px;
+            margin-bottom: 10px;
           }
         }
       }
@@ -156,5 +158,6 @@
 
   .mapContainer {
     height: 400px;
+    margin-top: 100px;
   }
 }
