Modify code and added admin panel

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300;400;500;700;900&family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300;400;500;700;900&family=Poppins:wght@200;300;400;500;600&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: var(--primary-font)
+  font-family: var(--primary-font);
 }
 
 a {
@@ -22,13 +22,13 @@ a {
   --primary-10: #fdeaeb;
   --secondary: #222222;
   --light-black: #4e5a62;
-  --bg-secondary: #F3F2F8;
+  --bg-secondary: #f3f2f8;
   --facebook: #3d6ad6;
   --twitter: #03a9f4;
   --linkedin: #0077b5;
-  --instagram: linear-gradient(to right, #feb80a , #a329a7);
+  --instagram: linear-gradient(to right, #feb80a, #a329a7);
   --primary-font: "Poppins", sans-serif;
-  --secondary-font: 'Frank Ruhl Libre', serif;
+  --secondary-font: "Frank Ruhl Libre", serif;
 }
 .themeTitle {
   display: flex;
@@ -66,23 +66,69 @@ a {
 .theme-padding {
   padding: 120px 0px;
 }
-.sticky{
+.sticky {
   position: fixed !important;
   top: 0;
   width: 100%;
   z-index: 999;
 }
 .afteFixedHeader {
-  padding-top: 120px
+  padding-top: 120px;
 }
 .sticky {
-padding: 10px 0 !important;
+  padding: 10px 0 !important;
 }
-.navbar-brand img{
-  transition: all 1s ease-in-out
+.navbar-brand img {
+  transition: all 1s ease-in-out;
 }
-.sticky .navbar-brand img{
+.sticky .navbar-brand img {
   max-width: 200px !important;
   width: 200px !important;
-  height: auto !important; 
+  height: auto !important;
+}
+.form-control:focus {
+  box-shadow: none !important;
+}
+.form-label {
+  margin-bottom: 5px !important;
+}
+
+/* Admin css */
+.ui.dropdown .menu {
+  right: 0;
+  left: auto !important;
+  top: 48px !important;
+  position: relative;
+}
+
+.list-header {
+  display: flex;
+  align-items: center;
+}
+
+.list-header svg {
+  font-size: 35px;
+}
+
+.list-header .content {
+  margin-left: 10px;
+}
+
+.list-header .content h2 {
+  margin: 0;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.action-footer {
+  position: fixed;
+  bottom: 0;
+  background: #f8f8f8f0;
+  right: 0;
+  padding: 15px;
+  text-align: right;
+  box-shadow: 0px 0px 0px 1px #f0f0f0;
+  width: calc(100% - 220px);
 }
