--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -85,11 +85,16 @@
           p {
             font-size: 16px;
             margin-bottom: 10px;
+            a {
+              color: #fff;
+              text-decoration: none;
+              &:hover {
+                color: #d2d2d2;
+              }
+            }
           }
         }
       }
-
-
     }
   }
 
@@ -153,7 +158,6 @@
         }
       }
     }
-
   }
 
   .mapContainer {
