--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -33,7 +33,10 @@
   min-height: 167px;
   position: relative;
 }
-
+.servicesViewBtn{
+  display: block;
+  margin: 0 auto;
+}
 .serviceIcon img {
   max-width: 58px;
   margin-bottom: 10px;
@@ -494,8 +497,11 @@
 
 .achieventContent h3 {
   margin-bottom: 0;
+  font-size: 20px;
 }
-
+.achieventContent h3 span{
+  font-size: 30px;
+}
 .achieventContent p {
   margin-bottom: 0;
   text-transform: capitalize;
@@ -523,7 +529,8 @@
 .bannerSliderBox {
   background-color: rgb(248, 248, 248);
   background-repeat: no-repeat;
-  background-image: url('/images/banner-1.jpg');
+  /* background-image: url('/images/banner-1.jpg'); */
+  background-image: url('/images/banner-new.jpg');
   background-size: cover;
   background-position: center center;
   width: 100%;
@@ -546,23 +553,23 @@
   color: rgb(255, 255, 255);
   visibility: inherit;
   transition: none 0s ease 0s;
-  text-align: center;
-  line-height: 72px;
+  text-align: left;
+  line-height: 50px;
   font-size: 36px;
+  text-transform: capitalize;
 }
 
 .bannerTitle p {
   color: rgb(255, 255, 255);
   visibility: inherit;
   transition: none 0s ease 0s;
-  text-align: center;
+  text-align: left;
   line-height: 36px;
   font-size: 22px;
 }
 
 .bannerBtn {
-  margin: 0 auto;
-  display: flex;
+  width: max-content;
   background: var(--primary);
   padding: 8px 16px;
   border-radius: 20px;
@@ -615,7 +622,15 @@
   background: rgba(0, 195, 255, 0.15);
 }
 .serviceBoxSmall .contentBox {
-  padding-left: calc(40px + 50px);
+  padding-left: calc(15px + 50px);
+}
+.contentBox h5{
+  text-transform: capitalize;
+  font-size: 21px;
+}
+.contentBox p{
+  margin-bottom: 0;
+  font-size: 16px;
 }
 .numberBox.serviceSecond {
   color: #0160e7;
